--- a/css/layout.css
+++ b/css/layout.css
@@ -547,10 +547,16 @@ div#editDiv.templatePicker .grid  .selectedItem {
     -webkit-border-radius: 3px;
     padding:0px !important;
     position: absolute;
+    visibility: hidden;
 }
 #visitDiv{
     padding:2px !important;
     overflow: auto;
     width: 243px;
     height: 144px;
+}
+.disabledButton {
+    border: solid 1px #999;
+    border-radius:3px;
+    color: #cccccc;
 }
