--- a/css/layout.css
+++ b/css/layout.css
@@ -555,8 +555,24 @@ div#editDiv.templatePicker .grid  .selectedItem {
     width: 243px;
     height: 144px;
 }
+.visitContentHeading {
+    font-style: italic;
+    margin: 2px;
+    padding-top: 4px;
+}
+.visitLegendItem {
+    padding-left: 10px;
+    margin: 2px;
+}
+.visitContent {
+    padding-left: 10px;
+    margin: 2px;
+    font-size: 80%;
+}
+/*
 .disabledButton {
     border: solid 1px #999;
     border-radius:3px;
     color: #cccccc;
 }
+*/
